<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <include
        android:id="@+id/main_bar"
        layout="@layout/app_bar" />

    <TextView
        android:id="@+id/searchText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="74dp"
        android:text="@string/Search"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/perisent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="115dp"
        android:paddingLeft="15dp"
        android:text="@string/Omera_Company_Touries_and_more" />

    <TextView
        android:id="@+id/check_in"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="210dp"
        android:background="@drawable/shapetext"
        android:paddingBottom="10dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="10dp"
        android:text="@string/check_in"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/check_out"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/search"
        android:layout_alignTop="@+id/check_in"
        android:background="@drawable/shapetext"
        android:paddingBottom="10dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="10dp"
        android:text="@string/check_out"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_alignRight="@+id/search" />

    <TextView
        android:id="@+id/type_hotel"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/check_out"
        android:background="@drawable/shapetext"
        android:drawableLeft="@drawable/ic_expand_more_black_24dp"
        android:gravity="center"
        android:text="@string/type_hotel"
        android:paddingBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/check_out"
        android:paddingLeft="10dp"
        android:paddingRight="30dp"
        android:paddingTop="10dp"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_alignRight="@+id/check_out" />

    <TextView
        android:id="@+id/type_bus"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/searchText"
        android:layout_alignTop="@+id/type_hotel"
        android:background="@drawable/shapetext"
        android:drawableLeft="@drawable/ic_expand_more_black_24dp"
        android:paddingBottom="10dp"
        android:layout_below="@+id/check_in"
        android:paddingLeft="10dp"
        android:paddingRight="30dp"
        android:paddingTop="10dp"
        android:text="Type_Bus"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:layout_alignLeft="@+id/searchText" />

    <Button
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_below="@+id/type_bus"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/shape_button"
        android:text="@string/Search"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/choice_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="154dp"
        android:background="@drawable/shapetext"
        android:drawableRight="@drawable/ic_search_black_24dp"
        android:paddingBottom="15dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="10dp"
        android:text="@string/Enter_Distination"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/num_seat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/type_bus"
        android:background="@drawable/shapetext"
        android:layout_marginTop="15dp"
        android:paddingBottom="15dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:inputType="number"
        android:gravity="center"
        android:paddingTop="10dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/Number_seat" />

</RelativeLayout>