<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <include
        android:id="@+id/toolbar_data"
        layout="@layout/app_bar" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_below="@+id/toolbar_data"
        android:layout_marginTop="14dp"
        android:padding="15dp"
        android:text="@string/name"
        android:textSize="20dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/nameTextView"
        android:layout_alignEnd="@+id/button"
        android:layout_alignRight="@+id/button"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/phoneTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/nameEditText"
        android:layout_marginTop="40dp"
        android:padding="16dp"
        android:paddingLeft="16dp"
        android:text="@string/phone_number"
        android:textSize="20dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/phoneTextView"
        android:layout_alignBottom="@+id/phoneTextView"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="phone" />

    <TextView
        android:id="@+id/bookingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/phoneTextView"
        android:layout_alignStart="@id/phoneTextView"
        android:layout_below="@id/phoneTextView"
        android:layout_marginTop="50dp"
        android:padding="16dp"
        android:drawableRight="@drawable/ic_expand_more_black_24dp"
        android:text="@string/type_of_booking"
        android:textSize="20dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="125dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/shape_button"
        android:text="@string/registration"
        android:textColor="@android:color/white"
        android:textSize="18sp" />


</RelativeLayout>