<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.app.emaneraky.Omrity.CompanyRegistration">

    <include
        android:id="@+id/regcompany_toolbar"
        layout="@layout/app_bar" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/nameEditText"
        android:layout_alignBottom="@+id/nameEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="15dp"
        android:text="@string/Company_Name"
        android:textSize="20dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/regcompany_toolbar"
        android:layout_marginTop="14dp"
        android:layout_toEndOf="@+id/locationTextView"
        android:layout_toRightOf="@+id/locationTextView"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="129dp"
        tools:layout_editor_absoluteY="3dp" />

    <TextView
        android:id="@+id/locationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/nameTextView"
        android:layout_marginTop="21dp"
        android:padding="15dp"
        android:text="@string/Company_location"
        android:textSize="20dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/locationEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/locationTextView"
        android:layout_toEndOf="@+id/locationTextView"
        android:layout_toRightOf="@+id/locationTextView"
        android:ems="10"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="129dp"
        tools:layout_editor_absoluteY="3dp" />

    <TextView
        android:id="@+id/PhoneTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/phoneEditText"
        android:layout_alignEnd="@id/nameTextView"
        android:layout_alignRight="@id/nameTextView"
        android:padding="15dp"
        android:text="@string/phone_number"
        android:textSize="20dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/locationEditText"
        android:layout_alignStart="@id/locationEditText"
        android:layout_below="@id/locationEditText"
        android:layout_marginTop="27dp"
        android:ems="15"
        android:inputType="phone" />

    <TextView
        android:id="@+id/passTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/passEditText"
        android:layout_alignLeft="@+id/RegistrationButton"
        android:layout_alignStart="@+id/RegistrationButton"
        android:padding="15dp"
        android:text="password"
        android:textSize="20dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/passEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/phoneEditText"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/RegistrationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/shape_button"
        android:text="@string/registration"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="161dp"
        android:layout_marginStart="35dp"
        android:padding="15dp"
        android:text="@string/Company_email"
        android:textSize="20dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp"
        android:layout_marginLeft="35dp"
        android:layout_alignParentLeft="true" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/emailTextView"
        android:layout_alignParentEnd="true"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_alignParentRight="true" />


</RelativeLayout>
